Fix body overflow caused from .row

--- a/Persona4GoldenHelper/Persona4GoldenHelper/wwwroot/css/site.css
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/wwwroot/css/site.css
@@ -42,11 +42,9 @@
         padding: 15px;
     }
 
-        #page-header a:hover {
-            background-color: transparent; /* overrides the background bootstrap puts on nav items */
-        }
 
-/* override bootstraps navbar styling to centeralise it and to make it stacked when in mobile mode */
+
+/* Bootstrap overrides */
 .navbar-nav > li {
     float: none;
     display: inline-block;
@@ -64,6 +62,15 @@
     margin-top: 0;
     margin-bottom: 0;
     font-size: 20px;
+}
+
+#page-header a:hover {
+    background-color: transparent; /* overrides the background bootstrap puts on nav items */
+}
+
+.row {
+    margin: 0;
+    width: 100%;
 }
 
 /* Site wide tag styling */
